fix spacing on iphone pt4

--- a/src/app/views/home/Home.scss
+++ b/src/app/views/home/Home.scss
@@ -137,26 +137,26 @@
       }
 
       #left-image {
-        margin-right: 0 !important;
-        margin-top: 20px;
+        // margin-right: 0 !important;
+        margin: 20px 0 0 0;
         width: 300px !important;
-        // height: 250px !important;
         height: auto;
 
         @media screen and (max-width: $break-small) {
-          margin-top: 80px;
+          margin: 80px 0 0 0;
         }
       }
 
       #right-image {
-        margin-right: 50px !important;
-        margin-top: 20px;
-        width: 250px !important;
+        // margin-right: 50px !important;
+        margin: 20px 50px 0 0;
+        width: 250px;
         // height: 250px !important;
         height: auto;
 
         @media screen and (max-width: $break-small) {
-          margin: auto auto 50px;
+          margin: auto auto 60px auto;
+          width: 200px;
         }
       }
   
@@ -177,7 +177,7 @@
       }
 
       h1 {
-        margin-bottom: .1em !important;
+        margin: auto auto .1em auto;
       }
     }
 
